# updateinfo-xmlparser

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  test.rs
